--- a/hackaton.ipynb
+++ b/hackaton.ipynb
@@ -2,13 +2,202 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rok</th>\n",
+       "      <th>Celková</th>\n",
+       "      <th>Uhelné</th>\n",
+       "      <th>Vodní</th>\n",
+       "      <th>Větrné</th>\n",
+       "      <th>Solární</th>\n",
+       "      <th>Jaderné</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>85903</td>\n",
+       "      <td>53574</td>\n",
+       "      <td>3380</td>\n",
+       "      <td>335</td>\n",
+       "      <td>616</td>\n",
+       "      <td>27998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>87477</td>\n",
+       "      <td>53951</td>\n",
+       "      <td>2664</td>\n",
+       "      <td>397</td>\n",
+       "      <td>2182</td>\n",
+       "      <td>28283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>87418</td>\n",
+       "      <td>51669</td>\n",
+       "      <td>2860</td>\n",
+       "      <td>416</td>\n",
+       "      <td>2149</td>\n",
+       "      <td>30324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>86913</td>\n",
+       "      <td>50015</td>\n",
+       "      <td>3639</td>\n",
+       "      <td>481</td>\n",
+       "      <td>2033</td>\n",
+       "      <td>30745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>86148</td>\n",
+       "      <td>50262</td>\n",
+       "      <td>2961</td>\n",
+       "      <td>477</td>\n",
+       "      <td>2123</td>\n",
+       "      <td>30325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>83892</td>\n",
+       "      <td>51143</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>573</td>\n",
+       "      <td>2264</td>\n",
+       "      <td>26841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>83309</td>\n",
+       "      <td>53375</td>\n",
+       "      <td>3202</td>\n",
+       "      <td>497</td>\n",
+       "      <td>2131</td>\n",
+       "      <td>24104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>87050</td>\n",
+       "      <td>52886</td>\n",
+       "      <td>3040</td>\n",
+       "      <td>591</td>\n",
+       "      <td>2193</td>\n",
+       "      <td>28340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>88032</td>\n",
+       "      <td>52464</td>\n",
+       "      <td>2679</td>\n",
+       "      <td>609</td>\n",
+       "      <td>2359</td>\n",
+       "      <td>29921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>87031</td>\n",
+       "      <td>50598</td>\n",
+       "      <td>3175</td>\n",
+       "      <td>700</td>\n",
+       "      <td>2312</td>\n",
+       "      <td>30246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>81517</td>\n",
+       "      <td>45051</td>\n",
+       "      <td>3437</td>\n",
+       "      <td>699</td>\n",
+       "      <td>2287</td>\n",
+       "      <td>30043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>84907</td>\n",
+       "      <td>47801</td>\n",
+       "      <td>3620</td>\n",
+       "      <td>602</td>\n",
+       "      <td>2153</td>\n",
+       "      <td>30731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rok  Celková  Uhelné  Vodní  Větrné  Solární  Jaderné\n",
+       "id                                                        \n",
+       "1   2010    85903   53574   3380     335      616    27998\n",
+       "2   2011    87477   53951   2664     397     2182    28283\n",
+       "3   2012    87418   51669   2860     416     2149    30324\n",
+       "4   2013    86913   50015   3639     481     2033    30745\n",
+       "5   2014    86148   50262   2961     477     2123    30325\n",
+       "6   2015    83892   51143   3071     573     2264    26841\n",
+       "7   2016    83309   53375   3202     497     2131    24104\n",
+       "8   2017    87050   52886   3040     591     2193    28340\n",
+       "9   2018    88032   52464   2679     609     2359    29921\n",
+       "10  2019    87031   50598   3175     700     2312    30246\n",
+       "11  2020    81517   45051   3437     699     2287    30043\n",
+       "12  2021    84907   47801   3620     602     2153    30731"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "from IPython.display import display\n",
     "\n",
-    "df = pd.read_csv(\"Elektricke energie_bilance_final.csv\", index_col=0)"
+    "df = pd.read_csv(\"Elektricke energie_bilance_final.csv\", index_col=0)\n",
+    "df = df.rename(columns={\"year\": \"rok\", \"Vyroba_e\": \"Celková\", \"p_elektrarny\": \"Uhelné\", \"vod_elektrarny\": \"Vodní\", \"vet_elektrarny\": \"Větrné\", \"sol_elektrarny\": \"Solární\", \"J_elektrarny\": \"Jaderné\"})\n",
+    "display(df)"
    ]
   }
  ],
@@ -28,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
