--- a/hackaton.ipynb
+++ b/hackaton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,17 @@
     "from IPython.display import display\n",
     "\n",
     "df = pd.read_csv(\"Elektricke energie_bilance_final.csv\", index_col=0)\n",
-    "df = df.rename(columns={\"year\": \"rok\", \"Vyroba_e\": \"Celková\", \"p_elektrarny\": \"Uhelné\", \"vod_elektrarny\": \"Vodní\", \"vet_elektrarny\": \"Větrné\", \"sol_elektrarny\": \"Solární\", \"J_elektrarny\": \"Jaderné\"})\n",
+    "df = df.rename(\n",
+    "    columns={\n",
+    "        \"year\": \"rok\",\n",
+    "        \"Vyroba_e\": \"Celková\",\n",
+    "        \"p_elektrarny\": \"Uhelné\",\n",
+    "        \"vod_elektrarny\": \"Vodní\",\n",
+    "        \"vet_elektrarny\": \"Větrné\",\n",
+    "        \"sol_elektrarny\": \"Solární\",\n",
+    "        \"J_elektrarny\": \"Jaderné\",\n",
+    "    }\n",
+    ")\n",
     "display(df)"
    ]
   }
