Načteni Instalovaneho vykonu

--- a/hackaton.ipynb
+++ b/hackaton.ipynb
@@ -209,6 +209,170 @@
     ")\n",
     "display(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['List1']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = \"Instalovany_vykon.xlsx\"\n",
+    "xls = pd.ExcelFile(file)\n",
+    "xls.sheet_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Instalovaný výkon [MWe]</td>\n",
+       "      <td>67460.28132</td>\n",
+       "      <td>67338.37677</td>\n",
+       "      <td>67608.44384</td>\n",
+       "      <td>68156.61652</td>\n",
+       "      <td>68194.40204</td>\n",
+       "      <td>67601.35307</td>\n",
+       "      <td>66332.55242</td>\n",
+       "      <td>65335.95424</td>\n",
+       "      <td>65195.77755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jaderné (JE)</td>\n",
+       "      <td>28196.00000</td>\n",
+       "      <td>28210.00000</td>\n",
+       "      <td>28224.00000</td>\n",
+       "      <td>28238.00000</td>\n",
+       "      <td>28252.00000</td>\n",
+       "      <td>28266.00000</td>\n",
+       "      <td>28280.00000</td>\n",
+       "      <td>28294.00000</td>\n",
+       "      <td>28308.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Parní (PE)</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paroplynové (PPE)</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plynové a spalovací (PSE)</td>\n",
+       "      <td>21940.90792</td>\n",
+       "      <td>21877.64677</td>\n",
+       "      <td>22006.97684</td>\n",
+       "      <td>22293.60552</td>\n",
+       "      <td>22302.55024</td>\n",
+       "      <td>22014.28007</td>\n",
+       "      <td>21378.45512</td>\n",
+       "      <td>20877.60744</td>\n",
+       "      <td>20806.16255</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Unnamed: 0         2014         2015         2016  \\\n",
+       "0    Instalovaný výkon [MWe]  67460.28132  67338.37677  67608.44384   \n",
+       "1               Jaderné (JE)  28196.00000  28210.00000  28224.00000   \n",
+       "2                 Parní (PE)      0.00000      0.00000      0.00000   \n",
+       "3          Paroplynové (PPE)      0.00000      0.00000      0.00000   \n",
+       "4  Plynové a spalovací (PSE)  21940.90792  21877.64677  22006.97684   \n",
+       "\n",
+       "          2017         2018         2019         2020         2021  \\\n",
+       "0  68156.61652  68194.40204  67601.35307  66332.55242  65335.95424   \n",
+       "1  28238.00000  28252.00000  28266.00000  28280.00000  28294.00000   \n",
+       "2      0.00000      0.00000      0.00000      0.00000      0.00000   \n",
+       "3      0.00000      0.00000      0.00000      0.00000      0.00000   \n",
+       "4  22293.60552  22302.55024  22014.28007  21378.45512  20877.60744   \n",
+       "\n",
+       "          2022  \n",
+       "0  65195.77755  \n",
+       "1  28308.00000  \n",
+       "2      0.00000  \n",
+       "3      0.00000  \n",
+       "4  20806.16255  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = xls.parse(\"List1\")\n",
+    "# df1 = df1.rename(columns={\"Unnamed: 0\": \"Country\"})\n",
+    "df1.head()"
+   ]
   }
  ],
  "metadata": {
