Aktualizace instalovaného výkonu

--- a/hackaton.ipynb
+++ b/hackaton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -212,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['List1']"
+       "['List1', 'List2', 'List3']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>Rok</th>\n",
        "      <th>2014</th>\n",
        "      <th>2015</th>\n",
        "      <th>2016</th>\n",
@@ -274,58 +274,228 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Instalovaný výkon [MWe]</td>\n",
-       "      <td>67460.28132</td>\n",
-       "      <td>67338.37677</td>\n",
-       "      <td>67608.44384</td>\n",
-       "      <td>68156.61652</td>\n",
-       "      <td>68194.40204</td>\n",
-       "      <td>67601.35307</td>\n",
-       "      <td>66332.55242</td>\n",
-       "      <td>65335.95424</td>\n",
-       "      <td>65195.77755</td>\n",
+       "      <td>2.194091e+04</td>\n",
+       "      <td>2.187765e+04</td>\n",
+       "      <td>2.200698e+04</td>\n",
+       "      <td>2.229361e+04</td>\n",
+       "      <td>2.230255e+04</td>\n",
+       "      <td>2.201428e+04</td>\n",
+       "      <td>2.137846e+04</td>\n",
+       "      <td>2.087761e+04</td>\n",
+       "      <td>2.080616e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Jaderné (JE)</td>\n",
-       "      <td>28196.00000</td>\n",
-       "      <td>28210.00000</td>\n",
-       "      <td>28224.00000</td>\n",
-       "      <td>28238.00000</td>\n",
-       "      <td>28252.00000</td>\n",
-       "      <td>28266.00000</td>\n",
-       "      <td>28280.00000</td>\n",
-       "      <td>28294.00000</td>\n",
-       "      <td>28308.00000</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
+       "      <td>4.290000e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Parní (PE)</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>1.083670e+04</td>\n",
+       "      <td>1.074185e+04</td>\n",
+       "      <td>1.084998e+04</td>\n",
+       "      <td>1.107552e+04</td>\n",
+       "      <td>1.107544e+04</td>\n",
+       "      <td>1.072987e+04</td>\n",
+       "      <td>1.005885e+04</td>\n",
+       "      <td>9.527695e+03</td>\n",
+       "      <td>9.415897e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Paroplynové (PPE)</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>1.363000e+03</td>\n",
+       "      <td>1.363315e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
+       "      <td>1.363500e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Plynové a spalovací (PSE)</td>\n",
+       "      <td>8.336690e+02</td>\n",
+       "      <td>8.555630e+02</td>\n",
+       "      <td>8.739920e+02</td>\n",
+       "      <td>8.959870e+02</td>\n",
+       "      <td>9.109098e+02</td>\n",
+       "      <td>9.377040e+02</td>\n",
+       "      <td>9.617493e+02</td>\n",
+       "      <td>9.831518e+02</td>\n",
+       "      <td>1.012218e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Vodní (VE)</td>\n",
+       "      <td>1.091049e+03</td>\n",
+       "      <td>1.094980e+03</td>\n",
+       "      <td>1.100191e+03</td>\n",
+       "      <td>1.112261e+03</td>\n",
+       "      <td>1.112520e+03</td>\n",
+       "      <td>1.113208e+03</td>\n",
+       "      <td>1.113913e+03</td>\n",
+       "      <td>1.114631e+03</td>\n",
+       "      <td>1.113576e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Přečerpávací (PVE)</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "      <td>1.171500e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Větrné (VTE)</td>\n",
+       "      <td>2.781909e+02</td>\n",
+       "      <td>2.821859e+02</td>\n",
+       "      <td>2.821549e+02</td>\n",
+       "      <td>3.082074e+02</td>\n",
+       "      <td>3.167074e+02</td>\n",
+       "      <td>3.394244e+02</td>\n",
+       "      <td>3.394244e+02</td>\n",
+       "      <td>3.394244e+02</td>\n",
+       "      <td>3.390949e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Fotovoltaické (FVE)</td>\n",
+       "      <td>2.076794e+03</td>\n",
+       "      <td>2.078250e+03</td>\n",
+       "      <td>2.075664e+03</td>\n",
+       "      <td>2.076626e+03</td>\n",
+       "      <td>2.061971e+03</td>\n",
+       "      <td>2.069075e+03</td>\n",
+       "      <td>2.079521e+03</td>\n",
+       "      <td>2.087705e+03</td>\n",
+       "      <td>2.100377e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Výroba elektřiny brutto [MWh]</td>\n",
+       "      <td>8.406143e+07</td>\n",
+       "      <td>8.180175e+07</td>\n",
+       "      <td>8.134669e+07</td>\n",
+       "      <td>8.501965e+07</td>\n",
+       "      <td>8.583606e+07</td>\n",
+       "      <td>8.487876e+07</td>\n",
+       "      <td>7.938390e+07</td>\n",
+       "      <td>8.293100e+07</td>\n",
+       "      <td>8.238005e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Rok          2014          2015          2016  \\\n",
+       "0        Instalovaný výkon [MWe]  2.194091e+04  2.187765e+04  2.200698e+04   \n",
+       "1                   Jaderné (JE)  4.290000e+03  4.290000e+03  4.290000e+03   \n",
+       "2                     Parní (PE)  1.083670e+04  1.074185e+04  1.084998e+04   \n",
+       "3              Paroplynové (PPE)  1.363000e+03  1.363315e+03  1.363500e+03   \n",
+       "4      Plynové a spalovací (PSE)  8.336690e+02  8.555630e+02  8.739920e+02   \n",
+       "5                     Vodní (VE)  1.091049e+03  1.094980e+03  1.100191e+03   \n",
+       "6             Přečerpávací (PVE)  1.171500e+03  1.171500e+03  1.171500e+03   \n",
+       "7                   Větrné (VTE)  2.781909e+02  2.821859e+02  2.821549e+02   \n",
+       "8            Fotovoltaické (FVE)  2.076794e+03  2.078250e+03  2.075664e+03   \n",
+       "9  Výroba elektřiny brutto [MWh]  8.406143e+07  8.180175e+07  8.134669e+07   \n",
+       "\n",
+       "           2017          2018          2019          2020          2021  \\\n",
+       "0  2.229361e+04  2.230255e+04  2.201428e+04  2.137846e+04  2.087761e+04   \n",
+       "1  4.290000e+03  4.290000e+03  4.290000e+03  4.290000e+03  4.290000e+03   \n",
+       "2  1.107552e+04  1.107544e+04  1.072987e+04  1.005885e+04  9.527695e+03   \n",
+       "3  1.363500e+03  1.363500e+03  1.363500e+03  1.363500e+03  1.363500e+03   \n",
+       "4  8.959870e+02  9.109098e+02  9.377040e+02  9.617493e+02  9.831518e+02   \n",
+       "5  1.112261e+03  1.112520e+03  1.113208e+03  1.113913e+03  1.114631e+03   \n",
+       "6  1.171500e+03  1.171500e+03  1.171500e+03  1.171500e+03  1.171500e+03   \n",
+       "7  3.082074e+02  3.167074e+02  3.394244e+02  3.394244e+02  3.394244e+02   \n",
+       "8  2.076626e+03  2.061971e+03  2.069075e+03  2.079521e+03  2.087705e+03   \n",
+       "9  8.501965e+07  8.583606e+07  8.487876e+07  7.938390e+07  8.293100e+07   \n",
+       "\n",
+       "           2022  \n",
+       "0  2.080616e+04  \n",
+       "1  4.290000e+03  \n",
+       "2  9.415897e+03  \n",
+       "3  1.363500e+03  \n",
+       "4  1.012218e+03  \n",
+       "5  1.113576e+03  \n",
+       "6  1.171500e+03  \n",
+       "7  3.390949e+02  \n",
+       "8  2.100377e+03  \n",
+       "9  8.238005e+07  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = xls.parse(\"List1\")\n",
+    "df1 = df1.rename(columns={\"Unnamed: 0\": \"Rok\"})\n",
+    "df1.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rok</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Instalovaný výkon [MWe]</td>\n",
        "      <td>21940.90792</td>\n",
        "      <td>21877.64677</td>\n",
        "      <td>22006.97684</td>\n",
@@ -336,42 +506,157 @@
        "      <td>20877.60744</td>\n",
        "      <td>20806.16255</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jaderné (JE)</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "      <td>4290.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Parní (PE)</td>\n",
+       "      <td>10836.70440</td>\n",
+       "      <td>10741.85200</td>\n",
+       "      <td>10849.97500</td>\n",
+       "      <td>11075.52400</td>\n",
+       "      <td>11075.44200</td>\n",
+       "      <td>10729.86900</td>\n",
+       "      <td>10058.84800</td>\n",
+       "      <td>9527.69500</td>\n",
+       "      <td>9415.89700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paroplynové (PPE)</td>\n",
+       "      <td>1363.00000</td>\n",
+       "      <td>1363.31500</td>\n",
+       "      <td>1363.50000</td>\n",
+       "      <td>1363.50000</td>\n",
+       "      <td>1363.50000</td>\n",
+       "      <td>1363.50000</td>\n",
+       "      <td>1363.50000</td>\n",
+       "      <td>1363.50000</td>\n",
+       "      <td>1363.50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plynové a spalovací (PSE)</td>\n",
+       "      <td>833.66900</td>\n",
+       "      <td>855.56300</td>\n",
+       "      <td>873.99200</td>\n",
+       "      <td>895.98700</td>\n",
+       "      <td>910.90980</td>\n",
+       "      <td>937.70400</td>\n",
+       "      <td>961.74930</td>\n",
+       "      <td>983.15180</td>\n",
+       "      <td>1012.21800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Vodní (VE)</td>\n",
+       "      <td>1091.04920</td>\n",
+       "      <td>1094.98050</td>\n",
+       "      <td>1100.19060</td>\n",
+       "      <td>1112.26110</td>\n",
+       "      <td>1112.51960</td>\n",
+       "      <td>1113.20809</td>\n",
+       "      <td>1113.91253</td>\n",
+       "      <td>1114.63113</td>\n",
+       "      <td>1113.57568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Přečerpávací (PVE)</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "      <td>1171.50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Větrné (VTE)</td>\n",
+       "      <td>278.19090</td>\n",
+       "      <td>282.18590</td>\n",
+       "      <td>282.15490</td>\n",
+       "      <td>308.20740</td>\n",
+       "      <td>316.70740</td>\n",
+       "      <td>339.42440</td>\n",
+       "      <td>339.42440</td>\n",
+       "      <td>339.42440</td>\n",
+       "      <td>339.09490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Fotovoltaické (FVE)</td>\n",
+       "      <td>2076.79442</td>\n",
+       "      <td>2078.25037</td>\n",
+       "      <td>2075.66434</td>\n",
+       "      <td>2076.62602</td>\n",
+       "      <td>2061.97144</td>\n",
+       "      <td>2069.07458</td>\n",
+       "      <td>2079.52089</td>\n",
+       "      <td>2087.70511</td>\n",
+       "      <td>2100.37697</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Unnamed: 0         2014         2015         2016  \\\n",
-       "0    Instalovaný výkon [MWe]  67460.28132  67338.37677  67608.44384   \n",
-       "1               Jaderné (JE)  28196.00000  28210.00000  28224.00000   \n",
-       "2                 Parní (PE)      0.00000      0.00000      0.00000   \n",
-       "3          Paroplynové (PPE)      0.00000      0.00000      0.00000   \n",
-       "4  Plynové a spalovací (PSE)  21940.90792  21877.64677  22006.97684   \n",
+       "                         Rok         2014         2015         2016  \\\n",
+       "0    Instalovaný výkon [MWe]  21940.90792  21877.64677  22006.97684   \n",
+       "1               Jaderné (JE)   4290.00000   4290.00000   4290.00000   \n",
+       "2                 Parní (PE)  10836.70440  10741.85200  10849.97500   \n",
+       "3          Paroplynové (PPE)   1363.00000   1363.31500   1363.50000   \n",
+       "4  Plynové a spalovací (PSE)    833.66900    855.56300    873.99200   \n",
+       "5                 Vodní (VE)   1091.04920   1094.98050   1100.19060   \n",
+       "6         Přečerpávací (PVE)   1171.50000   1171.50000   1171.50000   \n",
+       "7               Větrné (VTE)    278.19090    282.18590    282.15490   \n",
+       "8        Fotovoltaické (FVE)   2076.79442   2078.25037   2075.66434   \n",
        "\n",
        "          2017         2018         2019         2020         2021  \\\n",
-       "0  68156.61652  68194.40204  67601.35307  66332.55242  65335.95424   \n",
-       "1  28238.00000  28252.00000  28266.00000  28280.00000  28294.00000   \n",
-       "2      0.00000      0.00000      0.00000      0.00000      0.00000   \n",
-       "3      0.00000      0.00000      0.00000      0.00000      0.00000   \n",
-       "4  22293.60552  22302.55024  22014.28007  21378.45512  20877.60744   \n",
+       "0  22293.60552  22302.55024  22014.28007  21378.45512  20877.60744   \n",
+       "1   4290.00000   4290.00000   4290.00000   4290.00000   4290.00000   \n",
+       "2  11075.52400  11075.44200  10729.86900  10058.84800   9527.69500   \n",
+       "3   1363.50000   1363.50000   1363.50000   1363.50000   1363.50000   \n",
+       "4    895.98700    910.90980    937.70400    961.74930    983.15180   \n",
+       "5   1112.26110   1112.51960   1113.20809   1113.91253   1114.63113   \n",
+       "6   1171.50000   1171.50000   1171.50000   1171.50000   1171.50000   \n",
+       "7    308.20740    316.70740    339.42440    339.42440    339.42440   \n",
+       "8   2076.62602   2061.97144   2069.07458   2079.52089   2087.70511   \n",
        "\n",
        "          2022  \n",
-       "0  65195.77755  \n",
-       "1  28308.00000  \n",
-       "2      0.00000  \n",
-       "3      0.00000  \n",
-       "4  20806.16255  "
+       "0  20806.16255  \n",
+       "1   4290.00000  \n",
+       "2   9415.89700  \n",
+       "3   1363.50000  \n",
+       "4   1012.21800  \n",
+       "5   1113.57568  \n",
+       "6   1171.50000  \n",
+       "7    339.09490  \n",
+       "8   2100.37697  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = xls.parse(\"List1\")\n",
-    "# df1 = df1.rename(columns={\"Unnamed: 0\": \"Country\"})\n",
-    "df1.head()"
+    "df_interpol = df1[0:9]\n",
+    "df_interpol"
    ]
   }
  ],
@@ -391,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
